@@ -81,11 +81,11 @@ semistatic: .includes .depends .update
 	cd contrib;$(MAKE) -f Makefile.delsci static
 	cd contrib/uiuc/plugins/molfile_plugin/src;$(MAKE) -f Makefile.delsci
 	g++ $(BUILD) $(DEST) */*.o ov/src/*.o contrib/uiuc/plugins/molfile_plugin/src/*.o $(CFLAGS) $(LIB_DIRS) $(LIBS)	
-	$(PYTHON_EXE) modules/compile_pymol.py
 
 # need to be root to do this...
 
 unix-mindep: semistatic
+	$(PYTHON_EXE) modules/compile_pymol.py
 	/bin/rm -rf $(MINDEP)
 	install -d $(MDP)/ext/lib
 	cp -r modules $(MDP)
